Fix more problems with Java 9